syntax = "proto3";

package redispb;
option go_package = "./redispb";

message GetRequest{
    string key = 1;
}

message GetResponse{
    string data = 1;
}

message SetRequest{
    string key = 1;
    string value = 2;
}

message SetResponse{
    string data = 1;
}


service RedisService{
    rpc GetCache(GetRequest) returns (GetResponse) {};
    rpc SetCache(SetRequest) returns (SetResponse) {};
}